force-app/main/default/objects/IP_Transaction__c/IP_Transaction__c.object-meta.xml
<CustomObject>
    <description>[Technology Transfer Starter] A incoming or outgoing transaction, with monetary value, related to an IP, Opportunity or Contract record.</description>
    <label>Transaction</label>
    <nameField>
        <displayFormat>T{00000}</displayFormat>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>