force-app/main/default/objects/IP_Transaction__c/fields/Agreed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The agreed or proposed value.</inlineHelpText>
    <label>Proposed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>