force-app/main/default/objects/IP_Transaction__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <inlineHelpText>Incoming transactions such as grants or funding and outgoing transactions such as expenses</inlineHelpText>
    <label>Direction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incoming</fullName>
            </value>
            <value>
                <fullName>Outgoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>