force-app/main/default/objects/IP_Transaction__c/fields/IP_Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>IP_Actual_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The final amount of the transaction at the time of processing.</inlineHelpText>
    <label>Actual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>