force-app/main/default/objects/IP_Transaction__c/fields/IP_Contract__c.field-meta.xml
<CustomField>
    <fullName>IP_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The related contract/Agreement for this transaction</inlineHelpText>
    <label>Related Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>