force-app/main/default/objects/IP_Transaction__c/fields/IP_Expected_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_Expected_Payment_Date__c</fullName>
    <inlineHelpText>The date that the transaction amount is expected to transfer.</inlineHelpText>
    <label>Expected Payment Date</label>
    <type>DateTime</type>
</CustomField>