force-app/main/default/objects/IP_Transaction__c/fields/IP_External_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>IP_External_Payment_Reference__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Reference for the payment</inlineHelpText>
    <label>External Payment Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>