force-app/main/default/objects/IP_Transaction__c/fields/IP_Internal_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>IP_Internal_Payment_Reference__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Internal payment reference</inlineHelpText>
    <label>Internal Payment Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>