force-app/main/default/objects/IP_Transaction__c/fields/IP_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>IP_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Opportunity for this transaction</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>