force-app/main/default/objects/IP_Transaction__c/fields/IP_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>IP_Purchase_Order__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Purchase Order or approval reference for this transaction</inlineHelpText>
    <label>Purchase Order</label>
    <length>50</length>
    <type>Text</type>
</CustomField>