force-app/main/default/objects/IP_Transaction__c/fields/IP_Related_IP__c.field-meta.xml
<CustomField>
    <fullName>IP_Related_IP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The related IP record for this transaction.</inlineHelpText>
    <label>IP</label>
    <referenceTo>IP__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>