force-app/main/default/objects/IP_Transaction__c/fields/IP_Related_Patent__c.field-meta.xml
<CustomField>
    <fullName>IP_Related_Patent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The related Patent for this transaction</inlineHelpText>
    <label>Related Patent</label>
    <referenceTo>Patent__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>