force-app/main/default/objects/IP_Transaction__c/fields/IP_Transaction_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>IP_Transaction_Date_Time__c</fullName>
    <inlineHelpText>The actual date and time which the transaction took place.</inlineHelpText>
    <label>Transaction Date/Time</label>
    <type>DateTime</type>
</CustomField>