force-app/main/default/objects/IP_Transaction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Select the type of transaction</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Direction__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>IP Expense</fullName>
            </value>
            <value>
                <fullName>Licence Income</fullName>
            </value>
            <value>
                <fullName>Management Fee</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Patent - Attorney</fullName>
            </value>
            <value>
                <fullName>Patent - Filing</fullName>
            </value>
            <value>
                <fullName>Patent - Other Expense</fullName>
            </value>
            <value>
                <fullName>Patent - Search</fullName>
            </value>
            <value>
                <fullName>Subsidy</fullName>
            </value>
            <value>
                <fullName>Translation Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>